# planta-rock2

./: .gitignore  AUDIT_SUMMARY.md  CHECKLIST_MASTER.md  PROJECT_TRUTH.md  README.md  RUNBOOK_LOCAL.md  TEST_REPORT.md
audit/: EXECUTIVE_SUMMARY.md  backend_build_report.txt  frontend_build_report.txt  track_01_api_contracts.md  track_02_canonical_clusters.csv  track_02_data_consistency.md  track_03_DPIA_draft.md  track_03_RGPD_compliance.md  track_04_latency.json  track_04_latency.md  track_05_queue_theory.md  track_06_cabin_subclustering.md  track_07_density_grid.md  track_08_visitor_ux.md  track_09_failure_modes.md  track_10_maintenance_page.md
backend/: PROJECT_TRUTH.md  backend.env.example  pyproject.toml
backend/app/: config.py  main.py  schemas.py  schemas_cabins.py  schemas_density.py  state.py
backend/app/data/: clusters.py  shows.py
backend/app/routers/: cabins.py  chat.py  clusters.py  density.py  health.py  ingest.py  kpis.py  maintenance.py  ops.py  prosegur.py  route.py  sensors_health.py  shows.py  simulate.py  state.py  tv.py  websocket.py
backend/app/services/: alerts.py  chat.py  density.py  fusion.py  kpis.py  routing.py  simulation.py
backend/app/static/: index.html  maintenance.html
backend/tests/: test_alerts.py  test_api.py  test_cabins.py  test_density.py  test_fusion.py  test_kpis.py  test_schemas.py  test_simulation.py
docs/: COUNTERFACTUAL_QA.md  LAUNCH_REPORT.md
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
scripts/: build_dashboard.py  fix_dashboard.py
(+42 files in other folders)
